<resources>
    <string name="app_name">SexEd</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">SexEd</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="diseases_fragment_label">Enfermedades</string>
    <string name="chlamydia_fragment_label">Clamidia</string>
    <string name="gonorrhea_fragment_label">Clamidia</string>
    <string name="vph_fragment_label">Clamidia</string>
    <string name="diseases_sections_fragment_label">Secciones</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="diseases">Enfermedades</string>
    <string name="clamidia">Clamidia</string>
    <string name="hygiene">Higiene</string>
    <string name="sexuality">Sexualidad</string>
    <string name="condom">Preservativo</string>
    <string name="positive_relationships">Relaciones positivas</string>
    <string name="pills">Pastillas anticonceptivas</string>
    <string name="goTo">Abrir pestaña</string>
    <string name="menstruation">Menstruación</string>
    <string name="gonorrea">Gonorrea</string>
    <string name="vph">Virus del Papiloma Humano (VPH)</string>
    <string name="information">Información</string>
    <string name="sectionOne">Descripción</string>
    <string name="sectionSecond">Síntomas</string>
    <string name="sectionThird">Tratamiento</string>
    <string name="sectionFourth">Video</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_hygiene">La salud sexual es un aspecto fundamental de nuestro bienestar general, y la higiene desempeña un papel crucial en su mantenimiento. La práctica de buenos hábitos de higiene no solo promueve frescura y comodidad, sino que también contribuye significativamente a la prevención de infecciones y enfermedades ETS.</string>
    <string name="cleanUs">Cuidemos de nosotros</string>
    <string name="bathroom">Es esencial lavar regularmente las áreas genitales con agua y jabón.</string>
    <string name="condomKnowledge">Que tenemos que saber en relación con los preservativos?</string>
    <string name="text_condom">Poner un preservativo correctamente es vital para garantizar su eficacia en la prevención de enfermedades de transmisión sexual (ETS). Para ello, no olvides:</string>
    <string name="condom_steps">
&#8226; Verificar la fecha de vencimiento.\n\n&#8226; Guardarlo en un lugar fresco y seco.\n\n&#8226; Usar las manos para abrir el paquete en lugar de objetos afilados. \n\n&#8226;
        Desenrollarlo correctamente: Al desenrollar el preservativo sobre el pene erecto, asegúrate de hacerlo en la dirección correcta. \n\n&#8226; Usarlo desde el principio hasta el final: El preservativo debe colocarse antes de cualquier contacto genital y debe permanecer en su lugar durante toda la actividad sexual
    </string>
    <string name="pills_steps">
&#8226;  Tomarlas todos los días a la misma hora para garantizar su máxima eficacia. Olvidar una dosis puede disminuir su eficacia\n\n&#8226; Que además reducen el dolor menstrual y regulan el ciclo menstrual, aparte de mejorar el acné. \n\n.&#8226;Pueden haber efectos secundarios, como cambios en el estado de ánimo, sensibilidad en los senos, náuseas, entre otros. Sin embargo, estos efectos suelen disminuir con el tiempo.
    </string>
    <string name="pillsTitle">Que tenemos que saber sobre pastillas anticonceptivas?</string>
    <string name="text_pills">Las pastillas anticonceptivas, también conocidas como \"la píldora\", son uno de los métodos anticonceptivos más utilizados en todo el mundo. Están diseñadas sobretodo para prevenir el embarazo. No olvides: </string>
    <string name="positive_relations_title">Respeto, comunicación y confianza</string>
    <string name="text_positive_relations">Tener relaciones positivas en el ámbito sexual implica cultivar un ambiente de respeto, comunicación y consentimiento mutuo. Aquí algunos consejos importantes:</string>
    <string name="relations_advices">&#8226;Respeto Mutuo: Respeta los deseos y límites de tu pareja. No presiones ni fuerces a nadie a realizar acciones que no deseen. \n\n&#8226;Comunicación Abierta: Fomenta un diálogo abierto y honesto con tu pareja sobre deseos, límites y expectativas.\n\n &#8226; Consentimiento: El consentimiento debe ser explícito y voluntario. Ambas partes deben sentirse cómodas y libres para expresar sus límites.</string>
    <string name="compress">Compresas</string>
    <string name="more_info">Información detallada</string>
    <string name="delays">Retrasos</string>
    <string name="text_compress">Es vital que las mujeres estén informadas sobre las compresas y su relación con la salud sexual para garantizar prácticas seguras y mantener una buena higiene.</string>
    <string name="title_compress">Viaje informativo sobre Compresas y Salud Femenina</string>
    <string name="compress_steps"> &#8226;Si experimentas molestias, irritación persistente, o tienes preguntas sobre el uso de compresas en relación con tu salud sexual, es recomendable consultar a un profesional de la salud.\n\n&#8226; Las compresas deben cambiarse regularmente para prevenir infecciones.\n\n&#8226; Mantén una buena higiene íntima lavándote regularmente y cambiando las compresas según sea necesario.\n\n&#8226; No se recomienda el uso de compresas durante la actividad sexual, ya que pueden interferir con la lubricación natural y causar incomodidad.  </string>
    <string name="image_bath_description">Imagen que representa un entorno para cuidar nuestra higiene.</string>
    <string name="text_delays">"Los retrasos en la menstruación pueden ser causados por una variedad de razones, y es importante abordar este tema con cuidado y acudir a un profesional ante cualquier duda. "</string>
    <string name="title_delays">Posibles causas para la ausencia de menstruación</string>
    <string name="menstruation_absence_causes">&#8226;El embarazo es una de las razones más comunes para el retraso en la menstruación. Si hay alguna duda, se recomienda realizar una prueba de embarazo.\n\n &#8226;El estrés emocional y físico. Practicar técnicas para controlar el estrés como ejercicio regular puede ser beneficioso. \n\n&#8226; Los cambios significativos en el peso, ya sea pérdida o aumento.\n\n Ciertas condiciones médicas, como el síndrome de ovario poliquístico (SOP), problemas de tiroides u otras afecciones ginecológicas.</string>
</resources>