<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.sexed.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SexualityFragment"
            app:destination="@id/SexualityFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.sexed.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/SexualityFragment"
        android:name="com.example.sexed.SexualityFragment"
        android:label="@string/sexuality"
        tools:layout="@layout/fragment_sexuality">

        <action
            android:id="@+id/action_SexualityFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />

        <action
            android:id="@+id/action_SexualityFragment_to_HygieneFragment"
            app:destination="@id/HygieneFragment" />

        <action
            android:id="@+id/action_SexualityFragment_to_PreservativeFragment"
            app:destination="@id/PreservativeFragment" />

        <action
            android:id="@+id/action_SexualityFragment_to_PillsFragment"
            app:destination="@id/PillsFragment" />

        <action
            android:id="@+id/action_SexualityFragment_to_RelationsFragment"
            app:destination="@id/RelationsFragment" />
    </fragment>

    <fragment
        android:id="@+id/RelationsFragment"
        android:name="com.example.sexed.RelationsFragment"
        android:label="@string/positive_relationships"
        tools:layout="@layout/fragment_relations">

        <action
            android:id="@+id/action_RelationsFragment_to_SexualityFragment"
            app:destination="@id/SexualityFragment" />
    </fragment>

    <fragment
        android:id="@+id/PreservativeFragment"
        android:name="com.example.sexed.PreservativeFragment"
        android:label="@string/condom"
        tools:layout="@layout/fragment_preservative">

        <action
            android:id="@+id/action_PreservativeFragment_to_SexualityFragment"
            app:destination="@id/SexualityFragment" />
    </fragment>

    <fragment
        android:id="@+id/PillsFragment"
        android:name="com.example.sexed.PillsFragment"
        android:label="@string/pills"
        tools:layout="@layout/fragment_pills">

        <action
            android:id="@+id/action_PillsFragment_to_SexualityFragment"
            app:destination="@id/SexualityFragment" />
    </fragment>

    <fragment
        android:id="@+id/HygieneFragment"
        android:name="com.example.sexed.HygieneFragment"
        android:label="@string/hygiene"
        tools:layout="@layout/fragment_hygiene">

        <action
            android:id="@+id/action_HygieneFragment_to_SexualityFragment"
            app:destination="@id/SexualityFragment" />
    </fragment>
</navigation>