<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/buttonClamidia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clamidia"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/buttonGonorrea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gonorrea"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/buttonVPH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vph"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>