<!-- res/layout/fragment_hygiene.xml -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HygieneFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Título arriba del todo -->
        <TextView
            android:id="@+id/hygieneTopTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cleanUs"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"/>


        <!-- Descripción justo debajo del título -->
        <TextView
            android:id="@+id/hygieneDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_hygiene"
            android:layout_below="@id/hygieneTopTitleTextView"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textAlignment="center"/>

        <!-- Título justo debajo de la imagen -->

        <!-- Imagen entre la descripción y el siguiente título -->

        <TextView
            android:id="@+id/hygieneTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/staticImageView"
            android:layout_marginTop="-369dp"
            android:text="@string/bathroom"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/staticImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hygieneDescriptionTextView"
            android:layout_marginTop="16dp"
            android:src="@drawable/ducha"
            android:contentDescription="@string/image_bath_description"/>
        <!-- Resto del contenido, como el GridLayout, debajo del segundo título -->

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
