<!-- res/layout/fragment_hygiene.xml -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelationsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Título arriba del todo -->
        <TextView
            android:id="@+id/relationsTopTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/positive_relations_title"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"/>


        <!-- Descripción justo debajo del título -->
        <TextView
            android:id="@+id/relationsDescriptionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_positive_relations"
            android:layout_below="@id/relationsTopTitleTextView"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textAlignment="center"/>


        <!-- Nueva sección con una lista -->
        <TextView
            android:id="@+id/listTextViewRelations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below ="@+id/relationsDescriptionView"
            android:text="@string/relations_advices"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <!-- Imagen entre la descripción y el siguiente título -->
        <ImageView
            android:id="@+id/staticImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/relationsDescriptionView"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="223dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/positive" />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
