<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SexualityFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Tarjeta para Higiene -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <!-- Fondo de la CardView -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ducha" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Agrega más TextViews, ImageView, y enlaces a YouTube según sea necesario -->

            <TextView
                style="@style/TextViewStyleCardView"
                android:text="@string/hygiene" />

            <Button
                style="@style/ButtonCardView"
                android:id="@+id/buttonHygiene"
                android:text="@string/information" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <!-- Fondo de la CardView -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:scaleType="centerCrop"
            android:src="@drawable/positive" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Fondo de la CardView -->

            <!-- Etiqueta para Relaciones -->
            <TextView
                style="@style/TextViewStyleCardView"
                android:text="@string/positive_relationships"/>

            <Button
                android:id="@+id/buttonPositiveRelations"
                android:text="@string/information"
                style="@style/ButtonCardView"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Tarjeta para Pastillas -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <!-- Fondo de la CardView -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pills" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Etiqueta para Pastillas -->
            <TextView
                style="@style/TextViewStyleCardView"
                android:text="@string/pills"/>

            <!-- Botón para ir a la seccion de Pastillas -->
            <Button
                android:id="@+id/buttonPills"
                android:text="@string/information"
                style="@style/ButtonCardView"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Tarjeta para preservativo -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <!-- Fondo de la CardView -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:scaleType="centerCrop"
            android:src="@drawable/condom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Etiqueta para el preservativo -->
            <TextView
                style="@style/TextViewStyleCardView"
                android:text="@string/condom" />
            <!-- Botón para ir a la seccion de preservativo -->
            <Button
                android:id="@+id/buttonPreservative"
                android:text="@string/information"
                style="@style/ButtonCardView"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</FrameLayout>