<!-- res/layout/fragment_hygiene.xml -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompressFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Título arriba del todo -->
        <TextView
            android:id="@+id/compressTopTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_compress"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"/>


        <!-- Descripción justo debajo del título -->
        <TextView
            android:id="@+id/compressDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_compress"
            android:layout_below="@id/compressTopTitleTextView"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textAlignment="center"
            />

        <!-- Título justo debajo de la imagen -->

        <!-- Imagen entre la descripción y el siguiente título -->

        <!-- Nueva sección con una lista -->
        <TextView
            android:id="@+id/listTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/compressDescriptionTextView"
            android:layout_marginTop="16dp"
            android:text="@string/compress_steps"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <!-- Imagen entre la descripción y el siguiente título -->
        <ImageView
            android:id="@+id/staticImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/compressDescriptionTextView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/compress"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
