<!-- res/layout/fragment_hygiene.xml -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DelaysFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Título arriba del todo -->
        <TextView
            android:id="@+id/delaysTopTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_delays"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"/>


        <!-- Descripción justo debajo del título -->
        <TextView
            android:id="@+id/delaysDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_delays"
            android:layout_below="@id/delaysTopTitleTextView"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textAlignment="center"/>

        <!-- Título justo debajo de la imagen -->

        <!-- Imagen entre la descripción y el siguiente título -->

        <!-- Nueva sección con una lista -->

        <!-- Imagen entre la descripción y el siguiente título -->
        <TextView
            android:id="@+id/listTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/delaysDescriptionTextView"
            android:layout_marginTop="21dp"
            android:text="@string/menstruation_absence_causes"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/staticImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@id/delaysDescriptionTextView"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/menstruation" />
        <!-- Resto del contenido, como el GridLayout, debajo del segundo título -->

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
